# campanion

./: .env.example  .gitignore  README.md  api_spec.md  architecture.md  data_model.md  implementation_plan.md  prd.md  prompts.md
android/: .gitignore  README.md  REAL_DEVICE_TESTING_GUIDE.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zjl13/campanion/: CampanionApplication.kt  MainActivity.kt
android/app/src/main/java/com/zjl13/campanion/core/: AppContainer.kt  Formatters.kt  SessionStore.kt  ViewModelHelpers.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py  serializers.py
backend/app/api/routes/: auth.py  buddies.py  calendar.py  chat.py  goals.py  me.py  proofs.py  stats.py  tasks.py
backend/app/core/: config.py  ids.py  time.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  base.py  engagement.py  planning.py  user.py
backend/app/schemas/: auth.py  buddy.py  calendar.py  chat.py  common.py  goal.py  proof.py  stats.py  task.py  user.py
backend/app/services/: __init__.py  chat_service.py  persona.py  planner.py  proof_review.py  rescheduler.py  risk_service.py  scheduling.py
backend/app/workers/: reminder_worker.py
backend/tests/: conftest.py  test_api.py
infra/: docker-compose.yml
(+19 files in other folders)
